[tool.poetry]
name = "uartlogger"
version = "0.1.0"
description = "Module to allow for logging of the RH chip within the ICU"
authors = ["stephen.tucker"]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
